--- a/backend/package.json
+++ b/backend/package.json
@@ -14,7 +14,8 @@
     "firebase-admin": "^12.7.0",
     "mongoose": "^8.10.0",
     "multer": "^2.0.0",
-    "@aws-sdk/client-s3": "^3.698.0"
+    "@aws-sdk/client-s3": "^3.698.0",
+    "node-fetch": "^3.3.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
